# aisuite

./: .env.sample  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: run_pytest.yml
aisuite/: __init__.py  client.py
aisuite/framework/: __init__.py  chat_completion_response.py  choice.py  message.py  provider_interface.py
aisuite/providers/: anthropic_provider.py  aws_provider.py  azure_provider.py  bkp.py  bkp_genai.py  cerebras_provider.py  cohere_provider.py  deepseek_provider.py  fireworks_provider.py  gcp_provider_agents_TODO.py  google_provider.py  googlegenai_provider.py  groq_provider.py  huggingface_provider.py  message_converter.py  mistral_provider.py  nebius_provider.py  openai_provider.py  sambanova_provider.py  together_provider.py  watsonx_provider.py  xai_provider.py
aisuite/utils/: tool_manager.py  tools.py
examples/: DataScientistDemo.py  DeepseekPost.ipynb  QnA_with_pdf.ipynb  SimpleToolCalling.ipynb  ToolCallingPost.ipynb  aisuite_tool_abstraction.ipynb  client.ipynb  multi_fm_client.ipynb  simple_tool_calling.ipynb  tool_calling.py  tool_calling_abstraction.ipynb
guides/: README.md  aws.md  azure.md  cerebras.md  cohere.md  deepseek.md  google.md  huggingface.md  mistral.md  nebius.md  watsonx.md
tests/client/: test_client.py  test_prerelease.py
tests/providers/: test_anthropic_converter.py  test_aws_converter.py  test_azure_provider.py  test_cerebras_provider.py  test_cohere_provider.py  test_deepseek_provider.py  test_google_converter.py  test_google_provider.py  test_groq_provider.py  (+4 more)
(+1 files in other folders)
