[project]
name = "aisuite"
version = "0.1.0"
description = ""
authors = [
    {name = "Guilherme Vargas",email = "guilherme.vargas@contaazul.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "openai (>=1.65.5,<2.0.0)",
    "google-cloud-aiplatform (>=1.83.0,<2.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "docstring-parser (>=0.16,<0.17)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
